@@ -1,3 +1,10 @@
+2011-05-09  Miloslav Trmač  <mitr@redhat.com>
+
+	* src/utils.py (get_daemon_options): Add --internal-log-dir.
+	* src/server.py (main)
+	* src/bridge.py (main): Reflect --internal-log-dir, overriding
+	settings.log_dir.
+
 2011-05-06  Miloslav Trmač  <mitr@redhat.com>
 
 	* src/server.py (request_handling_child): Log errors when opening the
